--- a/pkg/cli/index.html
+++ b/pkg/cli/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Pulsor dev server</title>
     <style>
       :root {
         color-scheme: light dark;
@@ -11,7 +11,6 @@
     </style>
   </head>
   <body>
-    <div id="root"></div>
     <script type="module" src="./main.ts"></script>
   </body>
 </html>
