experimental task timing refactor

--- a/pkg/cli/index.html
+++ b/pkg/cli/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
+
     <title>Pulsor development server</title>
     <style>
       :root {
@@ -11,6 +13,7 @@
     </style>
   </head>
   <body>
+    <div id="root"></div>
     <script type="module" src="./main.ts"></script>
   </body>
 </html>
