--- a/pkg/dev/index.html
+++ b/pkg/dev/index.html
@@ -4,16 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
-
     <title>Pulsor development server</title>
     <style>
       :root {
         color-scheme: light dark;
       }
     </style>
+    <script defer async type="module" src="./main.ts"></script>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="./main.ts"></script>
   </body>
 </html>
