--- a/pkg/dev/index.html
+++ b/pkg/dev/index.html
@@ -8,5 +8,6 @@
     <script defer async type="module" src="./main.ts"></script>
   </head>
   <body>
+    <div id="pulsor"></div>
   </body>
 </html>
